style: Icons removed, side nav no longer collapsable

--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -5,6 +5,13 @@
     position: absolute;
 }
 
+.ant-menu-item {
+    font-weight: 100;
+    font-size: 16px !important;
+    text-align: center;
+    border-bottom: 1px solid #363636;
+}
+
 .avatar {
     position: absolute;
     right: 16px;
